gccida/g0/express_from
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/loop.c:7567:20: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/loop.c:7567:37: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/loop.c:7599:39: error: use of undeclared identifier 'machine_mode'
g1_add_vala = gen_rtx_fmt_ee( MULT, ( machine_mode)*( ( unsigned __int8 *)g1_add_val + 2), g1_add_val->fld[0].rtx, v4); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/loop.c:7603:39: error: use of undeclared identifier 'machine_mode'
g1_add_vala = gen_rtx_fmt_ee( MULT, ( machine_mode)*( ( unsigned __int8 *)g1_add_val + 2), g1_add_val, mult); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/loop.c:7627:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
tem = ( rtx)add[1]; 
            ^~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/express_from/src/obj/loop.o] Error 1
